--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-vue-next": "^0.303.0",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "radix-vue": "^1.2.5",
     "tailwind-merge": "^2.2.0",
