--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,13 +11,22 @@ rust-version = "1.60"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [".", "entity", "migration"]
+
 [build-dependencies]
 tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
+entity = { path = "entity" }
+migration = { path = "migration" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.4", features = [] }
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "full"] }
+sea-orm = { version = "0.12.10", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+bcrypt = "0.15.0"
+chrono = "0.4.31"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
