--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
     "config": "tailwind.config.js",
     "css": "src/assets/index.css",
     "baseColor": "slate",
-    "cssVariables": false
+    "cssVariables": true
   },
   "framework": "vite",
   "aliases": {
