--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
+    "@vee-validate/zod": "^4.12.4",
     "@vueuse/core": "^10.7.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "lucide-vue-next": "^0.303.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
-    "radix-vue": "^1.2.5",
+    "radix-vue": "^1.2.6",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
