--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@vueuse/core": "^10.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "lucide-vue-next": "^0.303.0",
-    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "radix-vue": "^1.2.6",
     "tailwind-merge": "^2.2.0",
