--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.5.3",
     "@vee-validate/zod": "^4.12.4",
+    "@vueform/multiselect": "^2.6.6",
     "@vueuse/core": "^10.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -42,6 +43,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "mini-svg-data-uri": "^1.4.4",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
