--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
+    "vue-currency-input": "^3.0.5",
     "vue-router": "^4.2.5",
     "zod": "^3.22.4"
   },
