--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tanstack/vue-table": "^8.11.8",
     "@tauri-apps/api": "^1.5.3",
     "@vee-validate/zod": "^4.12.4",
     "@vueform/multiselect": "^2.6.6",
